--- a/src/ExecutionStrategyExtended/ExecutionStrategyExtended.csproj
+++ b/src/ExecutionStrategyExtended/ExecutionStrategyExtended.csproj
@@ -13,12 +13,20 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <AssemblyName>EntityFrameworkCore.ExecutionStrategyExtended</AssemblyName>
         <RootNamespace>EntityFrameworkCore.ExecutionStrategyExtended</RootNamespace>
+        <PackageProjectUrl>https://github.com/NotIlya4/ExecutionStrategyExtended</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/NotIlya4/ExecutionStrategyExtended</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>ef-core iexecutionstrategy</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="ExecutionStrategyExtended.csproj.DotSettings" />
     </ItemGroup>
 
 </Project>
