--- a/src/ExecutionStrategyExtended/ExecutionStrategyExtended.csproj
+++ b/src/ExecutionStrategyExtended/ExecutionStrategyExtended.csproj
@@ -21,7 +21,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6" />
-      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.0" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
     </ItemGroup>
 
