--- a/src/ExecutionStrategyExtended.IntegrationTests/ExecutionStrategyExtended.IntegrationTests.csproj
+++ b/src/ExecutionStrategyExtended.IntegrationTests/ExecutionStrategyExtended.IntegrationTests.csproj
@@ -7,6 +7,7 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <RootNamespace>ExecutionStrategyExtended.UnitTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
