--- a/src/ExecutionStrategyExtended.Demo/ExecutionStrategyExtended.Demo.csproj
+++ b/src/ExecutionStrategyExtended.Demo/ExecutionStrategyExtended.Demo.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ExecutionStrategyExtended\ExecutionStrategyExtended.csproj" />
+      <ProjectReference Include="..\ExecutionStrategy.Extensions\ExecutionStrategy.Extensions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
