Prepare test fixture

--- a/src/ExecutionStrategy.Extensions.IntegrationTests/ExecutionStrategyExtended.IntegrationTests.csproj
+++ b/src/ExecutionStrategy.Extensions.IntegrationTests/ExecutionStrategyExtended.IntegrationTests.csproj
@@ -25,4 +25,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ExecutionStrategy.Extensions\ExecutionStrategy.Extensions.csproj" />
+    </ItemGroup>
+
 </Project>
