--- a/src/ExecutionStrategy.Extensions.IntegrationTests/ExecutionStrategy.Extensions.IntegrationTests.csproj
+++ b/src/ExecutionStrategy.Extensions.IntegrationTests/ExecutionStrategy.Extensions.IntegrationTests.csproj
@@ -12,6 +12,7 @@
     <ItemGroup>
         <PackageReference Include="Ductus.FluentDocker" Version="2.10.59" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.11" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
         <PackageReference Include="Verify" Version="22.1.1" />
