--- a/src/ExecutionStrategy.Extensions.IntegrationTests/ExecutionStrategy.Extensions.IntegrationTests.csproj
+++ b/src/ExecutionStrategy.Extensions.IntegrationTests/ExecutionStrategy.Extensions.IntegrationTests.csproj
@@ -14,8 +14,10 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.11" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
+        <PackageReference Include="Moq" Version="4.20.69" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
         <PackageReference Include="Verify" Version="22.1.1" />
+        <PackageReference Include="Verify.EntityFramework" Version="10.0.2" />
         <PackageReference Include="Verify.Xunit" Version="22.1.1" />
         <PackageReference Include="xunit" Version="2.5.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.1">
