--- a/src/ExecutionStrategy.Extensions.IntegrationTests/ExecutionStrategy.Extensions.IntegrationTests.csproj
+++ b/src/ExecutionStrategy.Extensions.IntegrationTests/ExecutionStrategy.Extensions.IntegrationTests.csproj
@@ -11,11 +11,16 @@
 
     <ItemGroup>
         <PackageReference Include="Ductus.FluentDocker" Version="2.10.59" />
+        <PackageReference Include="FluentValidation" Version="11.7.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.11" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
-        <PackageReference Include="Moq" Version="4.20.69" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+        <PackageReference Include="NSubstitute" Version="5.1.0" />
+        <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.16">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Verify" Version="22.1.1" />
         <PackageReference Include="Verify.EntityFramework" Version="10.0.2" />
         <PackageReference Include="Verify.Xunit" Version="22.1.1" />
