Organize github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,16 +9,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: ⬇️ checkout
         uses: actions/checkout@v3
 
-      - name: Test
-        run: dotnet test . --configuration Release
+      - name: 🛠️ build
+        uses: ./.github/workflows/build
 
-      - name: Upload Test Results
+      - name: 🧪 test
+        uses: ./.github/workflows/test
+
+      - name: 📁 upload verify results
         if: failure()
-        uses: actions/upload-artifact@v2
-        with:
-          name: verify-test-results
-          path: |
-            **/*.received.*
+        uses: ./.github/workflows/verify-result
